vlib/v/checker/tests/enum_as_int_err.out
vlib/v/checker/tests/enum_as_int_err.vv:9:10: error: cannot assign to `color`: expected `Color`, not `int literal`
    7 |     mut color := Color.red
    8 |     mut foo := 1
    9 |     color = 1
      |             ^
   10 |     foo = Color.red
   11 |     println(color == 0)
vlib/v/checker/tests/enum_as_int_err.vv:10:8: error: cannot assign to `foo`: expected `int`, not `Color`
    8 |     mut foo := 1
    9 |     color = 1
   10 |     foo = Color.red
      |           ~~~~~~~~~
   11 |     println(color == 0)
   12 |     _ = foo
vlib/v/checker/tests/enum_as_int_err.vv:11:10: error: infix expr: cannot use `int literal` (right expression) as `Color`
    9 |     color = 1
   10 |     foo = Color.red
   11 |     println(color == 0)
      |             ~~~~~~~~~~
   12 |     _ = foo
   13 | }
