vlib/v/checker/tests/enum_as_int_err.vv
enum Color {
	red
	blue
}

fn main() {
	mut color := Color.red
	mut foo := 1
	color = 1
	foo = Color.red
	println(color == 0)
}
